--- a/PyLearn7-Assignment18/calculator/main.ui
+++ b/PyLearn7-Assignment18/calculator/main.ui
@@ -6,25 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>456</width>
-    <height>484</height>
+    <width>430</width>
+    <height>476</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">background-color: rgb(97, 97, 97);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0" colspan="4">
      <widget class="QLineEdit" name="txtbox">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="font">
        <font>
         <family>Arial</family>
-        <pointsize>15</pointsize>
+        <pointsize>25</pointsize>
        </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:rgb(162, 227, 255)</string>
       </property>
      </widget>
     </item>
@@ -701,7 +710,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>456</width>
+     <width>430</width>
      <height>22</height>
     </rect>
    </property>
