--- a/PyLearn7-Assignment19/rock paper scissors/main_window.ui
+++ b/PyLearn7-Assignment19/rock paper scissors/main_window.ui
@@ -6,97 +6,43 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
-    <height>590</height>
+    <width>429</width>
+    <height>599</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color:rgb(246, 255, 83)</string>
+   <string notr="true">background-color:rgb(99, 88, 255);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="btn_rock">
+   <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>440</y>
-      <width>100</width>
-      <height>100</height>
+      <x>150</x>
+      <y>370</y>
+      <width>141</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Arial Black</family>
-      <pointsize>12</pointsize>
-      <bold>true</bold>
+      <family>Showcard Gothic</family>
+      <pointsize>15</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>rock</string>
+     <string>player</string>
     </property>
-   </widget>
-   <widget class="QPushButton" name="btn_paper">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>440</y>
-      <width>100</width>
-      <height>100</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Arial Black</family>
-      <pointsize>12</pointsize>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>paper</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_scissors">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>440</y>
-      <width>100</width>
-      <height>100</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Arial Black</family>
-      <pointsize>12</pointsize>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>scissors</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_result">
-    <property name="geometry">
-     <rect>
-      <x>40</x>
-      <y>200</y>
-      <width>300</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 194, 108)</string>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>140</x>
       <y>40</y>
       <width>141</width>
       <height>41</height>
@@ -115,66 +61,13 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>360</y>
-      <width>141</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Showcard Gothic</family>
-      <pointsize>15</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>player</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="cpu_board">
-    <property name="geometry">
-     <rect>
-      <x>140</x>
-      <y>80</y>
-      <width>110</width>
-      <height>110</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI</family>
-      <pointsize>26</pointsize>
-      <italic>true</italic>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(136, 102, 143);
-border-radius:10px</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QPushButton" name="player_board">
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>240</y>
-      <width>110</width>
-      <height>110</height>
+      <y>250</y>
+      <width>100</width>
+      <height>136</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -183,28 +76,40 @@ border-radius:10px</string>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
+    <property name="minimumSize">
+     <size>
+      <width>89</width>
+      <height>136</height>
+     </size>
+    </property>
     <property name="font">
      <font>
       <family>Segoe UI</family>
-      <pointsize>26</pointsize>
+      <pointsize>55</pointsize>
       <italic>true</italic>
       <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(136, 102, 143);
+     <string notr="true">background-color:rgb(99, 88, 255);
 border-radius:10px</string>
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>89</width>
+      <height>136</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="score_cpu">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>160</x>
       <y>0</y>
-      <width>110</width>
+      <width>115</width>
       <height>31</height>
      </rect>
     </property>
@@ -213,6 +118,12 @@ border-radius:10px</string>
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>115</width>
+      <height>20</height>
+     </size>
     </property>
     <property name="font">
      <font>
@@ -223,7 +134,7 @@ border-radius:10px</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(136, 102, 143);
+     <string notr="true">background-color:rgb(251, 149, 255);
 border-radius:10px</string>
     </property>
     <property name="text">
@@ -233,9 +144,9 @@ border-radius:10px</string>
    <widget class="QPushButton" name="score_player">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>400</y>
-      <width>110</width>
+      <x>160</x>
+      <y>420</y>
+      <width>115</width>
       <height>31</height>
      </rect>
     </property>
@@ -244,6 +155,12 @@ border-radius:10px</string>
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>115</width>
+      <height>20</height>
+     </size>
     </property>
     <property name="font">
      <font>
@@ -254,11 +171,196 @@ border-radius:10px</string>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(136, 102, 143);
+     <string notr="true">background-color:rgb(251, 149, 255);
 border-radius:10px</string>
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_rock">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>470</y>
+      <width>130</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>120</width>
+      <height>50</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial Black</family>
+      <pointsize>12</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(115, 255, 255)</string>
+    </property>
+    <property name="text">
+     <string>		rock</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>25</width>
+      <height>25</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_paper">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>470</y>
+      <width>130</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>120</width>
+      <height>50</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial Black</family>
+      <pointsize>12</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(115, 255, 255)</string>
+    </property>
+    <property name="text">
+     <string>		paper</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>25</width>
+      <height>25</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_scissors">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>470</y>
+      <width>130</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>120</width>
+      <height>50</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial Black</family>
+      <pointsize>12</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(115, 255, 255)</string>
+    </property>
+    <property name="text">
+     <string>		scissors</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>25</width>
+      <height>25</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_result">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>220</y>
+      <width>311</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>115</width>
+      <height>20</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial Black</family>
+      <pointsize>12</pointsize>
+      <italic>false</italic>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:rgb(251, 149, 255);
+border-radius:5px</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="cpu_board">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>70</y>
+      <width>100</width>
+      <height>136</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>89</width>
+      <height>136</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>55</pointsize>
+      <italic>true</italic>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:rgb(99, 88, 255);
+border-radius:10px</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>89</width>
+      <height>136</height>
+     </size>
     </property>
    </widget>
   </widget>
@@ -267,7 +369,7 @@ border-radius:10px</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>382</width>
+     <width>429</width>
      <height>22</height>
     </rect>
    </property>
