--- a/PyLearn7-Assignment19/rock paper scissors/main_window.ui
+++ b/PyLearn7-Assignment19/rock paper scissors/main_window.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>429</width>
-    <height>599</height>
+    <width>430</width>
+    <height>610</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>430</width>
+    <height>610</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>430</width>
+    <height>610</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -20,9 +38,9 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>370</y>
-      <width>141</width>
+      <x>144</x>
+      <y>410</y>
+      <width>142</width>
       <height>41</height>
      </rect>
     </property>
@@ -42,9 +60,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>40</y>
-      <width>141</width>
+      <x>144</x>
+      <y>50</y>
+      <width>142</width>
       <height>41</height>
      </rect>
     </property>
@@ -64,8 +82,8 @@
    <widget class="QPushButton" name="player_board">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>250</y>
+      <x>165</x>
+      <y>280</y>
       <width>100</width>
       <height>136</height>
      </rect>
@@ -107,9 +125,9 @@ border-radius:10px</string>
    <widget class="QPushButton" name="score_cpu">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>0</y>
-      <width>115</width>
+      <x>157</x>
+      <y>10</y>
+      <width>116</width>
       <height>31</height>
      </rect>
     </property>
@@ -127,10 +145,10 @@ border-radius:10px</string>
     </property>
     <property name="font">
      <font>
-      <family>Arial Black</family>
-      <pointsize>12</pointsize>
+      <family>Britannic Bold</family>
+      <pointsize>14</pointsize>
       <italic>false</italic>
-      <bold>true</bold>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -144,9 +162,9 @@ border-radius:10px</string>
    <widget class="QPushButton" name="score_player">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>420</y>
-      <width>115</width>
+      <x>157</x>
+      <y>450</y>
+      <width>116</width>
       <height>31</height>
      </rect>
     </property>
@@ -164,10 +182,10 @@ border-radius:10px</string>
     </property>
     <property name="font">
      <font>
-      <family>Arial Black</family>
-      <pointsize>12</pointsize>
+      <family>Britannic Bold</family>
+      <pointsize>14</pointsize>
       <italic>false</italic>
-      <bold>true</bold>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -182,7 +200,7 @@ border-radius:10px</string>
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>470</y>
+      <y>500</y>
       <width>130</width>
       <height>80</height>
      </rect>
@@ -195,9 +213,9 @@ border-radius:10px</string>
     </property>
     <property name="font">
      <font>
-      <family>Arial Black</family>
+      <family>Broadway</family>
       <pointsize>12</pointsize>
-      <bold>true</bold>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -217,7 +235,7 @@ border-radius:10px</string>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>470</y>
+      <y>500</y>
       <width>130</width>
       <height>80</height>
      </rect>
@@ -230,9 +248,9 @@ border-radius:10px</string>
     </property>
     <property name="font">
      <font>
-      <family>Arial Black</family>
+      <family>Broadway</family>
       <pointsize>12</pointsize>
-      <bold>true</bold>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -252,7 +270,7 @@ border-radius:10px</string>
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>470</y>
+      <y>500</y>
       <width>130</width>
       <height>80</height>
      </rect>
@@ -265,9 +283,9 @@ border-radius:10px</string>
     </property>
     <property name="font">
      <font>
-      <family>Arial Black</family>
+      <family>Broadway</family>
       <pointsize>12</pointsize>
-      <bold>true</bold>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -283,12 +301,12 @@ border-radius:10px</string>
      </size>
     </property>
    </widget>
-   <widget class="QPushButton" name="result">
+   <widget class="QPushButton" name="result_board">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>220</y>
-      <width>311</width>
+      <x>59</x>
+      <y>237</y>
+      <width>312</width>
       <height>31</height>
      </rect>
     </property>
@@ -306,10 +324,10 @@ border-radius:10px</string>
     </property>
     <property name="font">
      <font>
-      <family>Arial Black</family>
-      <pointsize>12</pointsize>
+      <family>Britannic Bold</family>
+      <pointsize>14</pointsize>
       <italic>false</italic>
-      <bold>true</bold>
+      <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
@@ -323,8 +341,8 @@ border-radius:5px</string>
    <widget class="QPushButton" name="cpu_board">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>70</y>
+      <x>165</x>
+      <y>90</y>
       <width>100</width>
       <height>136</height>
      </rect>
@@ -369,7 +387,7 @@ border-radius:10px</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>429</width>
+     <width>430</width>
      <height>22</height>
     </rect>
    </property>
