--- a/PyLearn7-Assignment19/15 puzzle/mainwindow.ui
+++ b/PyLearn7-Assignment19/15 puzzle/mainwindow.ui
@@ -10,8 +10,14 @@
     <height>447</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
-   <string>Puzzle 15</string>
+   <string>15 Puzzle</string>
   </property>
   <property name="windowIcon">
    <iconset theme="applications-games"/>
